[workspace]
members = ["quote2-macros"]

[package]
name = "quote2"
version = "0.2.0"
edition = "2021"

license = "MIT"
keywords = ["proc-macro", "quote"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/quote2"
description = "An alternative lightweight version of quote"

exclude = ["/quote2-macros",  ".*"]

[dependencies]
proc-macro2 = "1"
quote2-macros = { version = "0.2", path = "./quote2-macros" }