[workspace]
members = ["quote2-macros"]

[package]
name = "quote2"
version = "0.7.0"
edition = "2021"

license = "MIT"
keywords = ["proc-macro", "quote"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/quote2"
description = "An alternative lightweight version of quote"

exclude = ["/quote2-macros",  ".*", "/tests"]

[features]
default = []
proc-macro = []
proc-macro2 = ["dep:proc-macro2", "dep:quote"]

[dependencies]
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", default-features = false, optional = true }

quote2-macros = { version = "0.7", path = "./quote2-macros" }
