[package]
name = "quote2-macros"
version = "0.9.0"
edition = "2021"

license = "MIT"
keywords = ["proc-macro", "quote"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/quote2"
description = "An alternative lightweight version of quote"

[lib]
proc-macro = true

[dependencies]
